# thp-lang

./: .gitignore  CHANGELOG.md  CLI.md  Cargo.toml  Jenkinsfile  README.md  error_codes.yaml
compiler/: CHANGELOG.md  Cargo.toml
compiler/examples/: val_binding.misti
compiler/src/: lib.rs  main.rs  symbol_table.rs  token.rs
compiler/src/codegen/: binding.rs
compiler/src/error_handling/: syntax_error.rs
compiler/src/file/: mod.rs
compiler/src/lexic/: mod.rs  utils.rs
compiler/src/lexic/scanner/: mod.rs  new_comment.rs  number.rs  operator.rs  string.rs
compiler/src/repl/: mod.rs
compiler/src/semantic/: datatype.rs  guidance.md  mod.rs  type_check.rs
compiler/src/syntax/: binding.rs  expression.rs  mod.rs
compiler/src/utils/: mod.rs
doc-generator/: .gitignore  Cargo.toml  README.md
doc-generator/markdown/en/docs/latest/: index.md  index.toml  index.yaml
doc-generator/markdown/en/stdlib/latest/: index.md  index.toml  index.yaml
doc-generator/src/: main.rs  processor.rs  utils.rs
doc-generator/src/generator/: code.rs  emphasis.rs  heading.rs  inline_code.rs  list.rs  mod.rs  paragraph.rs  root.rs  strong.rs  text.rs
doc-generator/src/generator/highlighter/: mod.rs
doc-generator/src/highlighter/: mod.rs
doc-generator/src/pages/: md_compiler.rs  mod.rs
doc-generator/src/sidebar/: mod.rs
doc-generator/static/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  template.html
doc-generator/static/styles/: global.css  xcode-colors.css
doc-generator/static/tailwind/: output.css
src/: ast_types.rs  main.rs  (+2 more)
(+144 files in other folders)
