[package]
name = "misti"
version = "0.0.4"
edition = "2021"


[lib]
name = "misti"
path = "src/lib.rs"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.3", features = ["derive"] }
colored = "2.0.0"
