[package]
name = "doc-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
misti = { path = "../compiler"}
clap = { version = "4.2.0", features = ["derive"] }
markdown = "1.0.0-alpha.7"
toml = "0.7.3"

